# discogs-api

./: Cargo.toml  README.md
src/: discogs.rs  lib.rs
src/database/: artist.rs  mod.rs
src/routes/: artist.rs  mod.rs  release.rs
src/routes/artist/: mod.rs  types.rs
src/routes/release/: mod.rs  types.rs
src/types/: currency.rs  image.rs  mod.rs
