[package]
name = "discogs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = { version = "1.23.0", features = ["macros"] }

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
